--- a/src/pages/fotune-detail/fotune-detail.scss
+++ b/src/pages/fotune-detail/fotune-detail.scss
@@ -94,7 +94,7 @@ page-fotune-detail {
                     // text-transform: lowercase;
                 }
                 .span-2 {
-                    color: #e6a044;
+                    color: #fff255;
                     font-size: 1.2rem;
                 }
             }
@@ -112,7 +112,7 @@ page-fotune-detail {
                     padding: 5px;
                     .attribute-name {
                         span {
-                            color: #e6a044;
+                            color: #fff255;
                             font-weight: bold;
                             font-size: 1.5rem;
                         }
@@ -130,7 +130,7 @@ page-fotune-detail {
                             .uh-title {
                                 width: 25%;
                                 span {
-                                    color: #e6a044;
+                                    color: #fff255;
                                     font-style: italic;
                                     padding: 5px;
                                 }
