--- a/src/pages/fotune-detail/fotune-detail.scss
+++ b/src/pages/fotune-detail/fotune-detail.scss
@@ -152,13 +152,22 @@ page-fotune-detail {
         }
     }
     .btn-back {
-        width: 60%;
-        top: -30px;
         position: absolute;
-        left: 20%;
+        left: -10px;
+        width: 50%;
+        top: -34px;
+        // img {
+        //     height: 100%;
+        //     width: 100%;
+        // }
+    }
+    .btn-detail {
+        position: absolute;
+        right: -10px;
+        width: 50%;
+        top: -34px;
         img {
-            height: 100%;
-            width: 100%;
+            border-radius: 3px;
         }
     }
     .head-container {
